--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tech-chapter4",
+  "name": "frontend-chapter-4",
   "description": "4 лекция по frontend'у в рамках обучения студентов ИРНИТУ от компании ISPsystem",
   "version": "1.0.0",
   "author": {
